--- a/inst/ChangeLog
+++ b/inst/ChangeLog
@@ -1,4 +1,14 @@
 ==============================================================================
+Changes in dlnm 1.6.4 (22 Aug 2012)
+===================================
+
+Minor changes
+-------------
+
+    o Bug fixed in Description file.
+
+
+==============================================================================
 Changes in dlnm 1.6.3 (19 June 2012)
 ===================================
 
